--- a/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
+++ b/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
@@ -125,6 +125,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Ansuria.XFGloss">
+      <Version>1.1.2.89</Version>
+    </PackageReference>
     <PackageReference Include="Autofac">
       <Version>4.6.2</Version>
     </PackageReference>
