--- a/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
+++ b/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
@@ -132,7 +132,7 @@
       <Version>4.6.2</Version>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
-      <Version>1.0.4</Version>
+      <Version>1.1.4.145-pre</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
   </ItemGroup>
