--- a/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
+++ b/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
@@ -142,6 +142,9 @@
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.1.4.145-pre</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfListView">
+      <Version>16.1.0.32</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.3.6</Version>
     </PackageReference>
@@ -152,6 +155,9 @@
       <Version>2.3.6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
+    <PackageReference Include="Xfx.Controls">
+      <Version>1.1.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\tab_about.png" />
