--- a/PhantasmaMail/PhantasmaMail.iOS/Info.plist
+++ b/PhantasmaMail/PhantasmaMail.iOS/Info.plist
@@ -53,6 +53,7 @@
     <string>Fonts/Roboto-Medium.ttf</string>
     <string>Fonts/SF UI Text Regular.ttf</string>
     <string>Fonts/SF UI Text Semibold.ttf</string>
+    <string>Fonts/Geo.otf</string>
   </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
