--- a/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
+++ b/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
@@ -55,13 +55,16 @@
       <Version>1.1.3</Version>
     </PackageReference>
     <PackageReference Include="Autofac">
-      <Version>4.7.0</Version>
+      <Version>4.8.0</Version>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.1.4.145-pre</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
-      <Version>16.1.0.32</Version>
+      <Version>16.1.0.37</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugins.Forms.RoundedBoxView">
+      <Version>1.0.0.7</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.3.6</Version>
