--- a/PhantasmaMail/PhantasmaMail/PhantasmaMail.csproj
+++ b/PhantasmaMail/PhantasmaMail/PhantasmaMail.csproj
@@ -10,10 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="Ansuria.XFGloss" Version="1.1.3" />
-    <PackageReference Include="Autofac" Version="4.7.0" />
-    <PackageReference Include="NeoModules.NEP6" Version="0.0.1" />
+    <PackageReference Include="Autofac" Version="4.8.0" />
+    <PackageReference Include="NeoModules.NEP6" Version="0.0.2" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.145-pre" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="16.1.0.32" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="16.1.0.37" />
+    <PackageReference Include="Xam.Plugins.Forms.RoundedBoxView" Version="1.0.0.7" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.3.6" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.3.6" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.3.6" />
