--- a/PhantasmaMail/PhantasmaMail.Android/Properties/AndroidManifest.xml
+++ b/PhantasmaMail/PhantasmaMail.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="io.phantasma.PhantasmaMail" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="15" />
+	<uses-sdk android:minSdkVersion="19" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<application android:label="Phantasma Mail" android:icon="@drawable/phantasma_logo_vector"></application>
 </manifest>
