--- a/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
+++ b/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
@@ -62,6 +62,9 @@
     <PackageReference Include="Autofac">
       <Version>4.8.0</Version>
     </PackageReference>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.1.4.145-pre</Version>
     </PackageReference>
@@ -99,6 +102,7 @@
     <Compile Include="Renderers\CustomNavigationPageRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\OpenSans-Regular.ttf" />
@@ -204,6 +208,12 @@
     <AndroidResource Include="Resources\drawable\noemails.svg">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Splash_Screen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
