--- a/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
+++ b/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
@@ -62,6 +62,15 @@
     <PackageReference Include="Autofac">
       <Version>4.8.1</Version>
     </PackageReference>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Naxam.BottomTabbedPage">
+      <Version>0.2.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Naxam.Ittianyu.BottomNavExtension">
+      <Version>1.2.4</Version>
+    </PackageReference>
     <PackageReference Include="PCLStorage">
       <Version>1.0.2</Version>
     </PackageReference>
@@ -90,13 +99,13 @@
       <Version>0.6.0-preview</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
-      <Version>2.3.6</Version>
+      <Version>2.4.1.823</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
-      <Version>2.3.6</Version>
+      <Version>2.4.1.823</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Transformations">
-      <Version>2.3.6</Version>
+      <Version>2.4.1.823</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2" />
@@ -124,6 +133,7 @@
     <AndroidAsset Include="Assets\SF UI Text Regular.otf" />
     <AndroidAsset Include="Assets\SF UI Text Semibold.otf" />
     <AndroidAsset Include="Assets\Geo.otf" />
+    <AndroidAsset Include="Assets\OpenSans-LightItalic.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
