more UI and features

--- a/PhantasmaMail/PhantasmaMail.UWP/PhantasmaMail.UWP.csproj
+++ b/PhantasmaMail/PhantasmaMail.UWP/PhantasmaMail.UWP.csproj
@@ -155,6 +155,12 @@
     <PackageReference Include="Xamarin.Forms">
       <Version>3.0.0.482510</Version>
     </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile.Forms">
+      <Version>2.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PhantasmaMail\PhantasmaMail.csproj">
