--- a/PhantasmaMail/PhantasmaMail.Android/Properties/AndroidManifest.xml
+++ b/PhantasmaMail/PhantasmaMail.Android/Properties/AndroidManifest.xml
@@ -3,6 +3,8 @@
 	<uses-sdk android:minSdkVersion="19" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.FLASHLIGHT" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<application android:label="Phantasma Mail" android:icon="@drawable/phantasma_logo_vector"></application>
 </manifest>
